--- a/expected_loss.ipynb
+++ b/expected_loss.ipynb
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "5a8981a2",
    "metadata": {},
    "outputs": [],
@@ -324,12 +324,12 @@
     "    for borrower in borrowers.index:\n",
     "        rating = borrowers.loc[borrower, f'Year {year-1}']\n",
     "        prob_default = probs_default[year-2].loc[rating]\n",
-    "        prob_default_df.loc[borrower, f'Year_{year}_Prob_Default'] = prob_default"
+    "        prob_default_df.loc[borrower, f'Year {year}'] = prob_default"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "ce4a7a2d",
    "metadata": {},
    "outputs": [
@@ -354,15 +354,15 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Year_2_Prob_Default</th>\n",
-       "      <th>Year_3_Prob_Default</th>\n",
-       "      <th>Year_4_Prob_Default</th>\n",
-       "      <th>Year_5_Prob_Default</th>\n",
-       "      <th>Year_6_Prob_Default</th>\n",
-       "      <th>Year_7_Prob_Default</th>\n",
-       "      <th>Year_8_Prob_Default</th>\n",
-       "      <th>Year_9_Prob_Default</th>\n",
-       "      <th>Year_10_Prob_Default</th>\n",
+       "      <th>Year 2</th>\n",
+       "      <th>Year 3</th>\n",
+       "      <th>Year 4</th>\n",
+       "      <th>Year 5</th>\n",
+       "      <th>Year 6</th>\n",
+       "      <th>Year 7</th>\n",
+       "      <th>Year 8</th>\n",
+       "      <th>Year 9</th>\n",
+       "      <th>Year 10</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -504,49 +504,36 @@
        "</div>"
       ],
       "text/plain": [
-       "      Year_2_Prob_Default  Year_3_Prob_Default  Year_4_Prob_Default  \\\n",
-       "1                0.166667             0.108696             0.061776   \n",
-       "2                0.131474             0.109312             0.130252   \n",
-       "3                0.155462             0.097872             0.068702   \n",
-       "4                0.134921             0.126923             0.124000   \n",
-       "5                0.131474             0.109312             0.068702   \n",
-       "...                   ...                  ...                  ...   \n",
-       "1996             0.131356             0.109312             0.135246   \n",
-       "1997             0.166667             0.114815             0.111111   \n",
-       "1998             0.131356             0.126923             0.155378   \n",
-       "1999             0.108000             0.126923             0.124000   \n",
-       "2000             0.134921             0.132780             0.061776   \n",
+       "        Year 2    Year 3    Year 4    Year 5    Year 6    Year 7    Year 8  \\\n",
+       "1     0.166667  0.108696  0.061776  0.175000  0.133891  0.113360  0.113043   \n",
+       "2     0.131474  0.109312  0.130252  0.123932  0.139785  0.113360  0.108696   \n",
+       "3     0.155462  0.097872  0.068702  0.068273  0.151852  0.134615  0.113725   \n",
+       "4     0.134921  0.126923  0.124000  0.175000  0.103846  0.113445  0.121457   \n",
+       "5     0.131474  0.109312  0.068702  0.068273  0.117647  0.134615  0.093284   \n",
+       "...        ...       ...       ...       ...       ...       ...       ...   \n",
+       "1996  0.131356  0.109312  0.135246  0.138462  0.139785  0.100418  0.121771   \n",
+       "1997  0.166667  0.114815  0.111111  0.068273  0.151852  0.156118  0.121457   \n",
+       "1998  0.131356  0.126923  0.155378  0.133588  0.103846  0.134615  0.121771   \n",
+       "1999  0.108000  0.126923  0.124000  0.108434  0.103846  0.146067  0.113043   \n",
+       "2000  0.134921  0.132780  0.061776  0.109890  0.139785  0.146067  0.113281   \n",
        "\n",
-       "      Year_5_Prob_Default  Year_6_Prob_Default  Year_7_Prob_Default  \\\n",
-       "1                0.175000             0.133891             0.113360   \n",
-       "2                0.123932             0.139785             0.113360   \n",
-       "3                0.068273             0.151852             0.134615   \n",
-       "4                0.175000             0.103846             0.113445   \n",
-       "5                0.068273             0.117647             0.134615   \n",
-       "...                   ...                  ...                  ...   \n",
-       "1996             0.138462             0.139785             0.100418   \n",
-       "1997             0.068273             0.151852             0.156118   \n",
-       "1998             0.133588             0.103846             0.134615   \n",
-       "1999             0.108434             0.103846             0.146067   \n",
-       "2000             0.109890             0.139785             0.146067   \n",
-       "\n",
-       "      Year_8_Prob_Default  Year_9_Prob_Default  Year_10_Prob_Default  \n",
-       "1                0.113043             0.116667              0.157447  \n",
-       "2                0.108696             0.104478              0.122137  \n",
-       "3                0.113725             0.104478              0.137405  \n",
-       "4                0.121457             0.116667              0.116667  \n",
-       "5                0.093284             0.104478              0.157447  \n",
-       "...                   ...                  ...                   ...  \n",
-       "1996             0.121771             0.123457              0.152344  \n",
-       "1997             0.121457             0.113821              0.152344  \n",
-       "1998             0.121771             0.111538              0.157447  \n",
-       "1999             0.113043             0.111538              0.097378  \n",
-       "2000             0.113281             0.131274              0.123457  \n",
+       "        Year 9   Year 10  \n",
+       "1     0.116667  0.157447  \n",
+       "2     0.104478  0.122137  \n",
+       "3     0.104478  0.137405  \n",
+       "4     0.116667  0.116667  \n",
+       "5     0.104478  0.157447  \n",
+       "...        ...       ...  \n",
+       "1996  0.123457  0.152344  \n",
+       "1997  0.113821  0.152344  \n",
+       "1998  0.111538  0.157447  \n",
+       "1999  0.111538  0.097378  \n",
+       "2000  0.131274  0.123457  \n",
        "\n",
        "[2000 rows x 9 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,12 +544,257 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "290b57a8",
    "metadata": {},
    "outputs": [],
    "source": [
     "prob_default_df.to_excel(\"outputs/probability_of_default_year_2_to_10.xlsx\", index_label=\"Rating\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "fde9638c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lgd_df = pd.read_excel(\"data/lgd_data.xlsx\", index_col=0)\n",
+    "ead_df = pd.read_excel(\"data/ead_data.xlsx\", index_col=0)\n",
+    "amt_df = pd.read_excel(\"data/amt_data.xlsx\", index_col=0)\n",
+    "\n",
+    "expected_loss_df = pd.DataFrame()\n",
+    "\n",
+    "for year in range(2, 11):\n",
+    "    expected_loss_df[f'Year {year}'] = (prob_default_df[f'Year {year}'] *\n",
+    "                                        lgd_df[f'Year {year}'] *\n",
+    "                                        ead_df[f'Year {year}'] *\n",
+    "                                        amt_df[f'Year {year}'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "69ebe145",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year 2</th>\n",
+       "      <th>Year 3</th>\n",
+       "      <th>Year 4</th>\n",
+       "      <th>Year 5</th>\n",
+       "      <th>Year 6</th>\n",
+       "      <th>Year 7</th>\n",
+       "      <th>Year 8</th>\n",
+       "      <th>Year 9</th>\n",
+       "      <th>Year 10</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3.153358</td>\n",
+       "      <td>1.826221</td>\n",
+       "      <td>1.548568</td>\n",
+       "      <td>1.323648</td>\n",
+       "      <td>3.897854</td>\n",
+       "      <td>0.992977</td>\n",
+       "      <td>1.154766</td>\n",
+       "      <td>0.325165</td>\n",
+       "      <td>2.358725</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.744146</td>\n",
+       "      <td>1.619311</td>\n",
+       "      <td>1.018107</td>\n",
+       "      <td>0.243564</td>\n",
+       "      <td>2.726389</td>\n",
+       "      <td>0.381075</td>\n",
+       "      <td>0.651851</td>\n",
+       "      <td>0.824659</td>\n",
+       "      <td>1.537584</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2.313675</td>\n",
+       "      <td>1.528838</td>\n",
+       "      <td>1.070788</td>\n",
+       "      <td>0.090289</td>\n",
+       "      <td>2.588450</td>\n",
+       "      <td>2.760399</td>\n",
+       "      <td>1.335960</td>\n",
+       "      <td>1.630877</td>\n",
+       "      <td>1.172903</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.627390</td>\n",
+       "      <td>2.547194</td>\n",
+       "      <td>3.170567</td>\n",
+       "      <td>1.533551</td>\n",
+       "      <td>1.615161</td>\n",
+       "      <td>0.808163</td>\n",
+       "      <td>0.912681</td>\n",
+       "      <td>1.073781</td>\n",
+       "      <td>0.642663</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.577386</td>\n",
+       "      <td>0.284246</td>\n",
+       "      <td>1.362564</td>\n",
+       "      <td>2.955951</td>\n",
+       "      <td>0.092778</td>\n",
+       "      <td>0.412246</td>\n",
+       "      <td>1.552523</td>\n",
+       "      <td>1.191788</td>\n",
+       "      <td>0.594686</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1996</th>\n",
+       "      <td>1.386966</td>\n",
+       "      <td>1.429001</td>\n",
+       "      <td>0.543545</td>\n",
+       "      <td>0.571494</td>\n",
+       "      <td>2.441284</td>\n",
+       "      <td>0.631440</td>\n",
+       "      <td>1.106937</td>\n",
+       "      <td>1.761906</td>\n",
+       "      <td>0.372305</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1997</th>\n",
+       "      <td>0.919048</td>\n",
+       "      <td>1.611472</td>\n",
+       "      <td>2.637470</td>\n",
+       "      <td>1.953087</td>\n",
+       "      <td>2.781040</td>\n",
+       "      <td>0.705301</td>\n",
+       "      <td>0.686388</td>\n",
+       "      <td>0.303923</td>\n",
+       "      <td>0.344571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1998</th>\n",
+       "      <td>2.978620</td>\n",
+       "      <td>1.470045</td>\n",
+       "      <td>0.891673</td>\n",
+       "      <td>0.713605</td>\n",
+       "      <td>0.353139</td>\n",
+       "      <td>1.057625</td>\n",
+       "      <td>3.566960</td>\n",
+       "      <td>0.423019</td>\n",
+       "      <td>2.075920</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1999</th>\n",
+       "      <td>0.102470</td>\n",
+       "      <td>0.516315</td>\n",
+       "      <td>0.607898</td>\n",
+       "      <td>0.358999</td>\n",
+       "      <td>0.418499</td>\n",
+       "      <td>1.441232</td>\n",
+       "      <td>2.145254</td>\n",
+       "      <td>2.676669</td>\n",
+       "      <td>1.321754</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000</th>\n",
+       "      <td>0.877846</td>\n",
+       "      <td>1.054014</td>\n",
+       "      <td>1.573298</td>\n",
+       "      <td>1.849744</td>\n",
+       "      <td>3.760912</td>\n",
+       "      <td>0.291285</td>\n",
+       "      <td>0.401182</td>\n",
+       "      <td>2.439931</td>\n",
+       "      <td>0.148343</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2000 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Year 2    Year 3    Year 4    Year 5    Year 6    Year 7    Year 8  \\\n",
+       "1     3.153358  1.826221  1.548568  1.323648  3.897854  0.992977  1.154766   \n",
+       "2     0.744146  1.619311  1.018107  0.243564  2.726389  0.381075  0.651851   \n",
+       "3     2.313675  1.528838  1.070788  0.090289  2.588450  2.760399  1.335960   \n",
+       "4     0.627390  2.547194  3.170567  1.533551  1.615161  0.808163  0.912681   \n",
+       "5     0.577386  0.284246  1.362564  2.955951  0.092778  0.412246  1.552523   \n",
+       "...        ...       ...       ...       ...       ...       ...       ...   \n",
+       "1996  1.386966  1.429001  0.543545  0.571494  2.441284  0.631440  1.106937   \n",
+       "1997  0.919048  1.611472  2.637470  1.953087  2.781040  0.705301  0.686388   \n",
+       "1998  2.978620  1.470045  0.891673  0.713605  0.353139  1.057625  3.566960   \n",
+       "1999  0.102470  0.516315  0.607898  0.358999  0.418499  1.441232  2.145254   \n",
+       "2000  0.877846  1.054014  1.573298  1.849744  3.760912  0.291285  0.401182   \n",
+       "\n",
+       "        Year 9   Year 10  \n",
+       "1     0.325165  2.358725  \n",
+       "2     0.824659  1.537584  \n",
+       "3     1.630877  1.172903  \n",
+       "4     1.073781  0.642663  \n",
+       "5     1.191788  0.594686  \n",
+       "...        ...       ...  \n",
+       "1996  1.761906  0.372305  \n",
+       "1997  0.303923  0.344571  \n",
+       "1998  0.423019  2.075920  \n",
+       "1999  2.676669  1.321754  \n",
+       "2000  2.439931  0.148343  \n",
+       "\n",
+       "[2000 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expected_loss_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "8afb2454",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expected_loss_df.to_excel(\"outputs/expected_loss_year_2_to_10.xlsx\", index_label=\"Rating\")"
    ]
   }
  ],
