feat: calc first stress test scenario

--- a/expected_loss.ipynb
+++ b/expected_loss.ipynb
@@ -796,6 +796,43 @@
    "source": [
     "expected_loss_df.to_excel(\"outputs/expected_loss_year_2_to_10.xlsx\", index_label=\"Rating\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a8515fd",
+   "metadata": {},
+   "source": [
+    "## STRESS TESTING\n",
+    "(i) Cap LGD at 1.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d2f3110f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lgd = 1\n",
+    "\n",
+    "stress_test_expected_loss_df = pd.DataFrame()\n",
+    "\n",
+    "for year in range(2, 11):\n",
+    "    stress_test_expected_loss_df[f'Year {year}'] = (prob_default_df[f'Year {year}'] *\n",
+    "                                        lgd *\n",
+    "                                        ead_df[f'Year {year}'] *\n",
+    "                                        amt_df[f'Year {year}'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b3105606",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stress_test_expected_loss_df.to_excel(\"outputs/stress_test_expected_loss_year_2_to_10.xlsx\", index_label=\"Rating\")"
+   ]
   }
  ],
  "metadata": {
