chore: print all EL, write out pd per rating over years

--- a/expected_loss.ipynb
+++ b/expected_loss.ipynb
@@ -1814,6 +1814,227 @@
     "      \"\\nYear 10 EL (Stress test 1): \", sum(stress_test_expected_loss_df[['Year 10']].sum()),\n",
     "      \"\\nYear 10 EL (Stress test 2): \",sum(stress_test_2_expected_loss_df[['Year 10']].sum()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "df87769f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Year 2 EL:  3131.557697043848 \n",
+      "Year 2 EL (Stress test 1):  3645.448469429726 \n",
+      "Year 2 EL (Stress test 2):  3131.557697043848\n",
+      "Year 3 EL:  2817.3360248996837 \n",
+      "Year 3 EL (Stress test 1):  3258.117199658761 \n",
+      "Year 3 EL (Stress test 2):  2817.3360248996837\n",
+      "Year 4 EL:  2650.420431331857 \n",
+      "Year 4 EL (Stress test 1):  3151.2109650970756 \n",
+      "Year 4 EL (Stress test 2):  2650.420431331857\n",
+      "Year 5 EL:  2891.716216308031 \n",
+      "Year 5 EL (Stress test 1):  3343.590085686882 \n",
+      "Year 5 EL (Stress test 2):  2891.716216308031\n",
+      "Year 6 EL:  2910.980865521482 \n",
+      "Year 6 EL (Stress test 1):  3376.622618764512 \n",
+      "Year 6 EL (Stress test 2):  2910.980865521482\n",
+      "Year 7 EL:  2887.5116982403756 \n",
+      "Year 7 EL (Stress test 1):  3379.800123927786 \n",
+      "Year 7 EL (Stress test 2):  2887.5116982403756\n",
+      "Year 8 EL:  2614.057472571863 \n",
+      "Year 8 EL (Stress test 1):  3028.6109451478987 \n",
+      "Year 8 EL (Stress test 2):  2614.057472571863\n",
+      "Year 9 EL:  2665.7141742161994 \n",
+      "Year 9 EL (Stress test 1):  3085.676168305697 \n",
+      "Year 9 EL (Stress test 2):  2665.7141742161994\n",
+      "Year 10 EL:  2898.729532379717 \n",
+      "Year 10 EL (Stress test 1):  3344.517771987779 \n",
+      "Year 10 EL (Stress test 2):  2976.8521932109597\n"
+     ]
+    }
+   ],
+   "source": [
+    "for year in range(2, 11):\n",
+    "    print(f\"Year {year} EL: \", sum(expected_loss_df[[f'Year {year}']].sum()),\n",
+    "      f\"\\nYear {year} EL (Stress test 1): \", sum(stress_test_expected_loss_df[[f'Year {year}']].sum()),\n",
+    "      f\"\\nYear {year} EL (Stress test 2): \",sum(stress_test_2_expected_loss_df[[f'Year {year}']].sum()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "cbc74dd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year 2</th>\n",
+       "      <th>Year 3</th>\n",
+       "      <th>Year 4</th>\n",
+       "      <th>Year 5</th>\n",
+       "      <th>Year 6</th>\n",
+       "      <th>Year 7</th>\n",
+       "      <th>Year 8</th>\n",
+       "      <th>Year 9</th>\n",
+       "      <th>Year 10</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AAA</th>\n",
+       "      <td>0.134921</td>\n",
+       "      <td>0.097872</td>\n",
+       "      <td>0.068702</td>\n",
+       "      <td>0.175000</td>\n",
+       "      <td>0.151852</td>\n",
+       "      <td>0.113445</td>\n",
+       "      <td>0.113043</td>\n",
+       "      <td>0.131274</td>\n",
+       "      <td>0.152344</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AA</th>\n",
+       "      <td>0.096386</td>\n",
+       "      <td>0.109312</td>\n",
+       "      <td>0.130252</td>\n",
+       "      <td>0.108434</td>\n",
+       "      <td>0.139785</td>\n",
+       "      <td>0.156118</td>\n",
+       "      <td>0.108696</td>\n",
+       "      <td>0.111538</td>\n",
+       "      <td>0.137405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>0.153846</td>\n",
+       "      <td>0.132780</td>\n",
+       "      <td>0.154150</td>\n",
+       "      <td>0.068273</td>\n",
+       "      <td>0.146919</td>\n",
+       "      <td>0.100418</td>\n",
+       "      <td>0.119342</td>\n",
+       "      <td>0.104478</td>\n",
+       "      <td>0.123457</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BBB</th>\n",
+       "      <td>0.131474</td>\n",
+       "      <td>0.139706</td>\n",
+       "      <td>0.111111</td>\n",
+       "      <td>0.138462</td>\n",
+       "      <td>0.117647</td>\n",
+       "      <td>0.113360</td>\n",
+       "      <td>0.093284</td>\n",
+       "      <td>0.123457</td>\n",
+       "      <td>0.123404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BB</th>\n",
+       "      <td>0.131356</td>\n",
+       "      <td>0.108696</td>\n",
+       "      <td>0.155378</td>\n",
+       "      <td>0.133588</td>\n",
+       "      <td>0.118577</td>\n",
+       "      <td>0.146067</td>\n",
+       "      <td>0.121771</td>\n",
+       "      <td>0.113821</td>\n",
+       "      <td>0.116667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>0.142857</td>\n",
+       "      <td>0.061776</td>\n",
+       "      <td>0.145923</td>\n",
+       "      <td>0.103846</td>\n",
+       "      <td>0.120755</td>\n",
+       "      <td>0.113725</td>\n",
+       "      <td>0.116667</td>\n",
+       "      <td>0.097378</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C</th>\n",
+       "      <td>0.108000</td>\n",
+       "      <td>0.126923</td>\n",
+       "      <td>0.124000</td>\n",
+       "      <td>0.109890</td>\n",
+       "      <td>0.133891</td>\n",
+       "      <td>0.101215</td>\n",
+       "      <td>0.113281</td>\n",
+       "      <td>0.131783</td>\n",
+       "      <td>0.122137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>D</th>\n",
+       "      <td>0.155462</td>\n",
+       "      <td>0.114815</td>\n",
+       "      <td>0.135246</td>\n",
+       "      <td>0.123932</td>\n",
+       "      <td>0.128000</td>\n",
+       "      <td>0.134615</td>\n",
+       "      <td>0.121457</td>\n",
+       "      <td>0.106195</td>\n",
+       "      <td>0.157447</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Year 2    Year 3    Year 4    Year 5    Year 6    Year 7    Year 8  \\\n",
+       "AAA  0.134921  0.097872  0.068702  0.175000  0.151852  0.113445  0.113043   \n",
+       "AA   0.096386  0.109312  0.130252  0.108434  0.139785  0.156118  0.108696   \n",
+       "A    0.153846  0.132780  0.154150  0.068273  0.146919  0.100418  0.119342   \n",
+       "BBB  0.131474  0.139706  0.111111  0.138462  0.117647  0.113360  0.093284   \n",
+       "BB   0.131356  0.108696  0.155378  0.133588  0.118577  0.146067  0.121771   \n",
+       "B    0.166667  0.142857  0.061776  0.145923  0.103846  0.120755  0.113725   \n",
+       "C    0.108000  0.126923  0.124000  0.109890  0.133891  0.101215  0.113281   \n",
+       "D    0.155462  0.114815  0.135246  0.123932  0.128000  0.134615  0.121457   \n",
+       "\n",
+       "       Year 9   Year 10  \n",
+       "AAA  0.131274  0.152344  \n",
+       "AA   0.111538  0.137405  \n",
+       "A    0.104478  0.123457  \n",
+       "BBB  0.123457  0.123404  \n",
+       "BB   0.113821  0.116667  \n",
+       "B    0.116667  0.097378  \n",
+       "C    0.131783  0.122137  \n",
+       "D    0.106195  0.157447  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd_category_years_df = pd.DataFrame()\n",
+    "for year in range(2, 11):\n",
+    "    pd_category_years_df[f'Year {year}'] = probs_default[year-2]\n",
+    "pd_category_years_df.to_excel(\"outputs/pd_per_category_per_year.xlsx\", index='Rating')\n",
+    "pd_category_years_df"
+   ]
   }
  ],
  "metadata": {
