--- a/expected_loss.ipynb
+++ b/expected_loss.ipynb
@@ -847,63 +847,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2.758578</td>\n",
-       "      <td>2.733205</td>\n",
-       "      <td>1.852938</td>\n",
-       "      <td>1.095733</td>\n",
-       "      <td>3.628982</td>\n",
-       "      <td>1.199930</td>\n",
-       "      <td>1.383319</td>\n",
-       "      <td>0.481644</td>\n",
-       "      <td>2.090202</td>\n",
+       "      <td>3.305414</td>\n",
+       "      <td>3.024222</td>\n",
+       "      <td>2.262514</td>\n",
+       "      <td>1.030659</td>\n",
+       "      <td>4.315440</td>\n",
+       "      <td>1.401148</td>\n",
+       "      <td>1.487019</td>\n",
+       "      <td>0.364053</td>\n",
+       "      <td>2.236964</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.712716</td>\n",
-       "      <td>1.802327</td>\n",
-       "      <td>1.333564</td>\n",
-       "      <td>0.458697</td>\n",
-       "      <td>2.570401</td>\n",
-       "      <td>0.799775</td>\n",
-       "      <td>0.886370</td>\n",
-       "      <td>1.202898</td>\n",
-       "      <td>1.421794</td>\n",
+       "      <td>0.725574</td>\n",
+       "      <td>2.040332</td>\n",
+       "      <td>1.575140</td>\n",
+       "      <td>0.264251</td>\n",
+       "      <td>2.800668</td>\n",
+       "      <td>0.739983</td>\n",
+       "      <td>0.916089</td>\n",
+       "      <td>1.279427</td>\n",
+       "      <td>1.483330</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2.329014</td>\n",
-       "      <td>1.722952</td>\n",
-       "      <td>2.790212</td>\n",
-       "      <td>0.520943</td>\n",
-       "      <td>2.427939</td>\n",
-       "      <td>2.742567</td>\n",
-       "      <td>1.609691</td>\n",
-       "      <td>1.989088</td>\n",
+       "      <td>2.670592</td>\n",
+       "      <td>1.926336</td>\n",
+       "      <td>3.090564</td>\n",
+       "      <td>0.286974</td>\n",
+       "      <td>2.749161</td>\n",
+       "      <td>3.060351</td>\n",
+       "      <td>1.610298</td>\n",
+       "      <td>2.141547</td>\n",
        "      <td>1.623735</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.658404</td>\n",
-       "      <td>2.822264</td>\n",
-       "      <td>1.861372</td>\n",
-       "      <td>1.626669</td>\n",
-       "      <td>2.663382</td>\n",
-       "      <td>1.259962</td>\n",
-       "      <td>1.070039</td>\n",
-       "      <td>1.300233</td>\n",
-       "      <td>0.956708</td>\n",
+       "      <td>0.667935</td>\n",
+       "      <td>3.209464</td>\n",
+       "      <td>2.087481</td>\n",
+       "      <td>1.585640</td>\n",
+       "      <td>2.975885</td>\n",
+       "      <td>1.352153</td>\n",
+       "      <td>1.093862</td>\n",
+       "      <td>1.288537</td>\n",
+       "      <td>0.814086</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>0.587322</td>\n",
-       "      <td>0.392873</td>\n",
-       "      <td>3.435356</td>\n",
-       "      <td>6.307381</td>\n",
-       "      <td>0.387153</td>\n",
-       "      <td>0.579418</td>\n",
-       "      <td>2.181938</td>\n",
-       "      <td>1.426036</td>\n",
-       "      <td>0.852533</td>\n",
+       "      <td>0.562975</td>\n",
+       "      <td>0.320669</td>\n",
+       "      <td>4.555289</td>\n",
+       "      <td>6.725978</td>\n",
+       "      <td>0.127187</td>\n",
+       "      <td>0.489488</td>\n",
+       "      <td>2.542346</td>\n",
+       "      <td>1.489992</td>\n",
+       "      <td>0.719570</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -919,63 +919,63 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1996</th>\n",
-       "      <td>1.259794</td>\n",
-       "      <td>1.691734</td>\n",
-       "      <td>0.675585</td>\n",
-       "      <td>0.631888</td>\n",
-       "      <td>2.909051</td>\n",
-       "      <td>1.162174</td>\n",
-       "      <td>0.973818</td>\n",
-       "      <td>2.141372</td>\n",
-       "      <td>0.500762</td>\n",
+       "      <td>1.268570</td>\n",
+       "      <td>1.891186</td>\n",
+       "      <td>0.665358</td>\n",
+       "      <td>0.554969</td>\n",
+       "      <td>3.233015</td>\n",
+       "      <td>1.295063</td>\n",
+       "      <td>1.068627</td>\n",
+       "      <td>2.225010</td>\n",
+       "      <td>0.364913</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1997</th>\n",
-       "      <td>1.242837</td>\n",
-       "      <td>2.186675</td>\n",
-       "      <td>3.906826</td>\n",
-       "      <td>5.403671</td>\n",
-       "      <td>2.839611</td>\n",
-       "      <td>0.810046</td>\n",
-       "      <td>0.985183</td>\n",
-       "      <td>0.570191</td>\n",
-       "      <td>0.352412</td>\n",
+       "      <td>1.140161</td>\n",
+       "      <td>2.470644</td>\n",
+       "      <td>4.778902</td>\n",
+       "      <td>6.207716</td>\n",
+       "      <td>3.225656</td>\n",
+       "      <td>0.857501</td>\n",
+       "      <td>0.880846</td>\n",
+       "      <td>0.431147</td>\n",
+       "      <td>0.266503</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1998</th>\n",
-       "      <td>2.679144</td>\n",
-       "      <td>1.471928</td>\n",
+       "      <td>3.257173</td>\n",
+       "      <td>1.586254</td>\n",
        "      <td>1.062753</td>\n",
-       "      <td>1.079819</td>\n",
-       "      <td>0.727948</td>\n",
-       "      <td>1.516852</td>\n",
-       "      <td>3.399817</td>\n",
-       "      <td>0.642194</td>\n",
-       "      <td>1.896133</td>\n",
+       "      <td>0.966576</td>\n",
+       "      <td>0.548448</td>\n",
+       "      <td>1.618116</td>\n",
+       "      <td>4.075452</td>\n",
+       "      <td>0.495385</td>\n",
+       "      <td>1.948546</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1999</th>\n",
-       "      <td>0.378650</td>\n",
-       "      <td>0.821708</td>\n",
-       "      <td>0.906551</td>\n",
-       "      <td>0.835671</td>\n",
-       "      <td>0.734831</td>\n",
-       "      <td>1.297273</td>\n",
-       "      <td>2.209949</td>\n",
-       "      <td>3.084216</td>\n",
-       "      <td>1.812600</td>\n",
+       "      <td>0.136285</td>\n",
+       "      <td>0.650556</td>\n",
+       "      <td>0.951436</td>\n",
+       "      <td>0.599064</td>\n",
+       "      <td>0.602109</td>\n",
+       "      <td>1.578289</td>\n",
+       "      <td>2.339718</td>\n",
+       "      <td>3.140928</td>\n",
+       "      <td>1.916111</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000</th>\n",
-       "      <td>1.293711</td>\n",
-       "      <td>1.459819</td>\n",
-       "      <td>3.419774</td>\n",
-       "      <td>1.998317</td>\n",
-       "      <td>3.384690</td>\n",
-       "      <td>0.478016</td>\n",
-       "      <td>0.604067</td>\n",
-       "      <td>2.118609</td>\n",
-       "      <td>0.222447</td>\n",
+       "      <td>1.331307</td>\n",
+       "      <td>1.428848</td>\n",
+       "      <td>4.417577</td>\n",
+       "      <td>2.074798</td>\n",
+       "      <td>4.019797</td>\n",
+       "      <td>0.284595</td>\n",
+       "      <td>0.512435</td>\n",
+       "      <td>2.388508</td>\n",
+       "      <td>0.199774</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -984,30 +984,30 @@
       ],
       "text/plain": [
        "        Year 2    Year 3    Year 4    Year 5    Year 6    Year 7    Year 8  \\\n",
-       "1     2.758578  2.733205  1.852938  1.095733  3.628982  1.199930  1.383319   \n",
-       "2     0.712716  1.802327  1.333564  0.458697  2.570401  0.799775  0.886370   \n",
-       "3     2.329014  1.722952  2.790212  0.520943  2.427939  2.742567  1.609691   \n",
-       "4     0.658404  2.822264  1.861372  1.626669  2.663382  1.259962  1.070039   \n",
-       "5     0.587322  0.392873  3.435356  6.307381  0.387153  0.579418  2.181938   \n",
+       "1     3.305414  3.024222  2.262514  1.030659  4.315440  1.401148  1.487019   \n",
+       "2     0.725574  2.040332  1.575140  0.264251  2.800668  0.739983  0.916089   \n",
+       "3     2.670592  1.926336  3.090564  0.286974  2.749161  3.060351  1.610298   \n",
+       "4     0.667935  3.209464  2.087481  1.585640  2.975885  1.352153  1.093862   \n",
+       "5     0.562975  0.320669  4.555289  6.725978  0.127187  0.489488  2.542346   \n",
        "...        ...       ...       ...       ...       ...       ...       ...   \n",
-       "1996  1.259794  1.691734  0.675585  0.631888  2.909051  1.162174  0.973818   \n",
-       "1997  1.242837  2.186675  3.906826  5.403671  2.839611  0.810046  0.985183   \n",
-       "1998  2.679144  1.471928  1.062753  1.079819  0.727948  1.516852  3.399817   \n",
-       "1999  0.378650  0.821708  0.906551  0.835671  0.734831  1.297273  2.209949   \n",
-       "2000  1.293711  1.459819  3.419774  1.998317  3.384690  0.478016  0.604067   \n",
+       "1996  1.268570  1.891186  0.665358  0.554969  3.233015  1.295063  1.068627   \n",
+       "1997  1.140161  2.470644  4.778902  6.207716  3.225656  0.857501  0.880846   \n",
+       "1998  3.257173  1.586254  1.062753  0.966576  0.548448  1.618116  4.075452   \n",
+       "1999  0.136285  0.650556  0.951436  0.599064  0.602109  1.578289  2.339718   \n",
+       "2000  1.331307  1.428848  4.417577  2.074798  4.019797  0.284595  0.512435   \n",
        "\n",
        "        Year 9   Year 10  \n",
-       "1     0.481644  2.090202  \n",
-       "2     1.202898  1.421794  \n",
-       "3     1.989088  1.623735  \n",
-       "4     1.300233  0.956708  \n",
-       "5     1.426036  0.852533  \n",
+       "1     0.364053  2.236964  \n",
+       "2     1.279427  1.483330  \n",
+       "3     2.141547  1.623735  \n",
+       "4     1.288537  0.814086  \n",
+       "5     1.489992  0.719570  \n",
        "...        ...       ...  \n",
-       "1996  2.141372  0.500762  \n",
-       "1997  0.570191  0.352412  \n",
-       "1998  0.642194  1.896133  \n",
-       "1999  3.084216  1.812600  \n",
-       "2000  2.118609  0.222447  \n",
+       "1996  2.225010  0.364913  \n",
+       "1997  0.431147  0.266503  \n",
+       "1998  0.495385  1.948546  \n",
+       "1999  3.140928  1.916111  \n",
+       "2000  2.388508  0.199774  \n",
        "\n",
        "[2000 rows x 9 columns]"
       ]
@@ -1026,7 +1026,7 @@
     "new_lost_amt_df = pd.DataFrame()\n",
     "\n",
     "for year in range(2, 11):\n",
-    "    new_lost_amt_df[f'Year {year}'] = amt_df[f'Year {year}'] * lgd_df[f'Year {year}'] + stress_test_lgd[year-1]\n",
+    "    new_lost_amt_df[f'Year {year}'] = amt_df[f'Year {year}'] * lgd_df[f'Year {year}'] * stress_test_lgd[year-1]\n",
     "\n",
     "for year in range(2, 11):\n",
     "    for borrower in borrowers.index:\n",
@@ -1804,7 +1804,7 @@
      "output_type": "stream",
      "text": [
       "Year 10 EL:  2898.729532379717 \n",
-      "Year 10 EL (Stress test 1):  3344.517771987779 \n",
+      "Year 10 EL (Stress test 1):  3482.116918244594 \n",
       "Year 10 EL (Stress test 2):  2976.8521932109597\n"
      ]
     }
@@ -1817,7 +1817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "df87769f",
    "metadata": {},
    "outputs": [
@@ -1826,31 +1826,31 @@
      "output_type": "stream",
      "text": [
       "Year 2 EL:  3131.557697043848 \n",
-      "Year 2 EL (Stress test 1):  3645.448469429726 \n",
+      "Year 2 EL (Stress test 1):  4050.698682569628 \n",
       "Year 2 EL (Stress test 2):  3131.557697043848\n",
       "Year 3 EL:  2817.3360248996837 \n",
-      "Year 3 EL (Stress test 1):  3258.117199658761 \n",
+      "Year 3 EL (Stress test 1):  3497.675043115332 \n",
       "Year 3 EL (Stress test 2):  2817.3360248996837\n",
       "Year 4 EL:  2650.420431331857 \n",
-      "Year 4 EL (Stress test 1):  3151.2109650970756 \n",
+      "Year 4 EL (Stress test 1):  3695.0492378954277 \n",
       "Year 4 EL (Stress test 2):  2650.420431331857\n",
       "Year 5 EL:  2891.716216308031 \n",
-      "Year 5 EL (Stress test 1):  3343.590085686882 \n",
+      "Year 5 EL (Stress test 1):  3550.023006530744 \n",
       "Year 5 EL (Stress test 2):  2891.716216308031\n",
       "Year 6 EL:  2910.980865521482 \n",
-      "Year 6 EL (Stress test 1):  3376.622618764512 \n",
+      "Year 6 EL (Stress test 1):  3623.5176261294127 \n",
       "Year 6 EL (Stress test 2):  2910.980865521482\n",
       "Year 7 EL:  2887.5116982403756 \n",
-      "Year 7 EL (Stress test 1):  3379.800123927786 \n",
+      "Year 7 EL (Stress test 1):  3883.3190196609276 \n",
       "Year 7 EL (Stress test 2):  2887.5116982403756\n",
       "Year 8 EL:  2614.057472571863 \n",
-      "Year 8 EL (Stress test 1):  3028.6109451478987 \n",
+      "Year 8 EL (Stress test 1):  3286.212035382131 \n",
       "Year 8 EL (Stress test 2):  2614.057472571863\n",
       "Year 9 EL:  2665.7141742161994 \n",
-      "Year 9 EL (Stress test 1):  3085.676168305697 \n",
+      "Year 9 EL (Stress test 1):  3244.9926198201174 \n",
       "Year 9 EL (Stress test 2):  2665.7141742161994\n",
       "Year 10 EL:  2898.729532379717 \n",
-      "Year 10 EL (Stress test 1):  3344.517771987779 \n",
+      "Year 10 EL (Stress test 1):  3482.116918244594 \n",
       "Year 10 EL (Stress test 2):  2976.8521932109597\n"
      ]
     }
@@ -2035,6 +2035,14 @@
     "pd_category_years_df.to_excel(\"outputs/pd_per_category_per_year.xlsx\", index='Rating')\n",
     "pd_category_years_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94bef857",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
