feat: add expected loss df

--- a/expected_loss.ipynb
+++ b/expected_loss.ipynb
@@ -1817,7 +1817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "df87769f",
    "metadata": {},
    "outputs": [
@@ -1856,7 +1856,13 @@
     }
    ],
    "source": [
+    "el_scenarios_df = pd.DataFrame(columns=['Year', 'Base Case EL', 'Stress Test 1 EL', 'Stress Test 2 EL'])\n",
+    "\n",
     "for year in range(2, 11):\n",
+    "    el_scenarios_df.loc[year, 'Year'] = year\n",
+    "    el_scenarios_df.loc[year, 'Base Case EL'] = sum(expected_loss_df[[f'Year {year}']].sum())\n",
+    "    el_scenarios_df.loc[year, 'Stress Test 1 EL'] = sum(stress_test_expected_loss_df[[f'Year {year}']].sum())\n",
+    "    el_scenarios_df.loc[year, 'Stress Test 2 EL'] = sum(stress_test_2_expected_loss_df[[f'Year {year}']].sum())\n",
     "    print(f\"Year {year} EL: \", sum(expected_loss_df[[f'Year {year}']].sum()),\n",
     "      f\"\\nYear {year} EL (Stress test 1): \", sum(stress_test_expected_loss_df[[f'Year {year}']].sum()),\n",
     "      f\"\\nYear {year} EL (Stress test 2): \",sum(stress_test_2_expected_loss_df[[f'Year {year}']].sum()))"
@@ -2038,11 +2044,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "94bef857",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "el_scenarios_df.to_excel(\"outputs/expected_loss_scenarios_summary.xlsx\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5b1f8cce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Base Case EL</th>\n",
+       "      <th>Stress Test 1 EL</th>\n",
+       "      <th>Stress Test 2 EL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3131.557697</td>\n",
+       "      <td>4050.698683</td>\n",
+       "      <td>3131.557697</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2817.336025</td>\n",
+       "      <td>3497.675043</td>\n",
+       "      <td>2817.336025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2650.420431</td>\n",
+       "      <td>3695.049238</td>\n",
+       "      <td>2650.420431</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2891.716216</td>\n",
+       "      <td>3550.023007</td>\n",
+       "      <td>2891.716216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>2910.980866</td>\n",
+       "      <td>3623.517626</td>\n",
+       "      <td>2910.980866</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
+       "      <td>2887.511698</td>\n",
+       "      <td>3883.31902</td>\n",
+       "      <td>2887.511698</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
+       "      <td>2614.057473</td>\n",
+       "      <td>3286.212035</td>\n",
+       "      <td>2614.057473</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>9</td>\n",
+       "      <td>2665.714174</td>\n",
+       "      <td>3244.99262</td>\n",
+       "      <td>2665.714174</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>10</td>\n",
+       "      <td>2898.729532</td>\n",
+       "      <td>3482.116918</td>\n",
+       "      <td>2976.852193</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year Base Case EL Stress Test 1 EL Stress Test 2 EL\n",
+       "2     2  3131.557697      4050.698683      3131.557697\n",
+       "3     3  2817.336025      3497.675043      2817.336025\n",
+       "4     4  2650.420431      3695.049238      2650.420431\n",
+       "5     5  2891.716216      3550.023007      2891.716216\n",
+       "6     6  2910.980866      3623.517626      2910.980866\n",
+       "7     7  2887.511698       3883.31902      2887.511698\n",
+       "8     8  2614.057473      3286.212035      2614.057473\n",
+       "9     9  2665.714174       3244.99262      2665.714174\n",
+       "10   10  2898.729532      3482.116918      2976.852193"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "el_scenarios_df"
+   ]
   }
  ],
  "metadata": {
