feat: add overall transition matrix

--- a/transition_matrix.ipynb
+++ b/transition_matrix.ipynb
@@ -475,6 +475,327 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "75e6d43b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AAA</th>\n",
+       "      <th>AA</th>\n",
+       "      <th>A</th>\n",
+       "      <th>BBB</th>\n",
+       "      <th>BB</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AAA</th>\n",
+       "      <td>275.0</td>\n",
+       "      <td>287.0</td>\n",
+       "      <td>262.0</td>\n",
+       "      <td>273.0</td>\n",
+       "      <td>307.0</td>\n",
+       "      <td>283.0</td>\n",
+       "      <td>271.0</td>\n",
+       "      <td>284.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AA</th>\n",
+       "      <td>281.0</td>\n",
+       "      <td>295.0</td>\n",
+       "      <td>285.0</td>\n",
+       "      <td>285.0</td>\n",
+       "      <td>265.0</td>\n",
+       "      <td>297.0</td>\n",
+       "      <td>268.0</td>\n",
+       "      <td>275.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>266.0</td>\n",
+       "      <td>282.0</td>\n",
+       "      <td>296.0</td>\n",
+       "      <td>272.0</td>\n",
+       "      <td>260.0</td>\n",
+       "      <td>286.0</td>\n",
+       "      <td>275.0</td>\n",
+       "      <td>270.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BBB</th>\n",
+       "      <td>275.0</td>\n",
+       "      <td>286.0</td>\n",
+       "      <td>265.0</td>\n",
+       "      <td>281.0</td>\n",
+       "      <td>305.0</td>\n",
+       "      <td>295.0</td>\n",
+       "      <td>276.0</td>\n",
+       "      <td>274.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BB</th>\n",
+       "      <td>269.0</td>\n",
+       "      <td>302.0</td>\n",
+       "      <td>283.0</td>\n",
+       "      <td>278.0</td>\n",
+       "      <td>276.0</td>\n",
+       "      <td>265.0</td>\n",
+       "      <td>295.0</td>\n",
+       "      <td>288.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>285.0</td>\n",
+       "      <td>251.0</td>\n",
+       "      <td>264.0</td>\n",
+       "      <td>324.0</td>\n",
+       "      <td>287.0</td>\n",
+       "      <td>288.0</td>\n",
+       "      <td>318.0</td>\n",
+       "      <td>271.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C</th>\n",
+       "      <td>283.0</td>\n",
+       "      <td>295.0</td>\n",
+       "      <td>285.0</td>\n",
+       "      <td>283.0</td>\n",
+       "      <td>279.0</td>\n",
+       "      <td>282.0</td>\n",
+       "      <td>315.0</td>\n",
+       "      <td>273.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>D</th>\n",
+       "      <td>288.0</td>\n",
+       "      <td>268.0</td>\n",
+       "      <td>256.0</td>\n",
+       "      <td>267.0</td>\n",
+       "      <td>303.0</td>\n",
+       "      <td>259.0</td>\n",
+       "      <td>275.0</td>\n",
+       "      <td>288.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       AAA     AA      A    BBB     BB      B      C      D\n",
+       "AAA  275.0  287.0  262.0  273.0  307.0  283.0  271.0  284.0\n",
+       "AA   281.0  295.0  285.0  285.0  265.0  297.0  268.0  275.0\n",
+       "A    266.0  282.0  296.0  272.0  260.0  286.0  275.0  270.0\n",
+       "BBB  275.0  286.0  265.0  281.0  305.0  295.0  276.0  274.0\n",
+       "BB   269.0  302.0  283.0  278.0  276.0  265.0  295.0  288.0\n",
+       "B    285.0  251.0  264.0  324.0  287.0  288.0  318.0  271.0\n",
+       "C    283.0  295.0  285.0  283.0  279.0  282.0  315.0  273.0\n",
+       "D    288.0  268.0  256.0  267.0  303.0  259.0  275.0  288.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "overall_transition_matrix_df = transition_matrices[0].copy()\n",
+    "\n",
+    "for matrix in transition_matrices[1:]:\n",
+    "    overall_transition_matrix_df += matrix\n",
+    "overall_transition_matrix_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3a3cd5de",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AAA</th>\n",
+       "      <th>AA</th>\n",
+       "      <th>A</th>\n",
+       "      <th>BBB</th>\n",
+       "      <th>BB</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AAA</th>\n",
+       "      <td>0.122658</td>\n",
+       "      <td>0.128011</td>\n",
+       "      <td>0.116860</td>\n",
+       "      <td>0.121766</td>\n",
+       "      <td>0.136931</td>\n",
+       "      <td>0.126227</td>\n",
+       "      <td>0.120874</td>\n",
+       "      <td>0.126673</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AA</th>\n",
+       "      <td>0.124833</td>\n",
+       "      <td>0.131053</td>\n",
+       "      <td>0.126610</td>\n",
+       "      <td>0.126610</td>\n",
+       "      <td>0.117725</td>\n",
+       "      <td>0.131941</td>\n",
+       "      <td>0.119058</td>\n",
+       "      <td>0.122168</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>0.120526</td>\n",
+       "      <td>0.127775</td>\n",
+       "      <td>0.134119</td>\n",
+       "      <td>0.123244</td>\n",
+       "      <td>0.117807</td>\n",
+       "      <td>0.129588</td>\n",
+       "      <td>0.124604</td>\n",
+       "      <td>0.122338</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BBB</th>\n",
+       "      <td>0.121843</td>\n",
+       "      <td>0.126717</td>\n",
+       "      <td>0.117412</td>\n",
+       "      <td>0.124502</td>\n",
+       "      <td>0.135135</td>\n",
+       "      <td>0.130704</td>\n",
+       "      <td>0.122286</td>\n",
+       "      <td>0.121400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BB</th>\n",
+       "      <td>0.119238</td>\n",
+       "      <td>0.133865</td>\n",
+       "      <td>0.125443</td>\n",
+       "      <td>0.123227</td>\n",
+       "      <td>0.122340</td>\n",
+       "      <td>0.117465</td>\n",
+       "      <td>0.130762</td>\n",
+       "      <td>0.127660</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>0.124563</td>\n",
+       "      <td>0.109703</td>\n",
+       "      <td>0.115385</td>\n",
+       "      <td>0.141608</td>\n",
+       "      <td>0.125437</td>\n",
+       "      <td>0.125874</td>\n",
+       "      <td>0.138986</td>\n",
+       "      <td>0.118444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C</th>\n",
+       "      <td>0.123312</td>\n",
+       "      <td>0.128540</td>\n",
+       "      <td>0.124183</td>\n",
+       "      <td>0.123312</td>\n",
+       "      <td>0.121569</td>\n",
+       "      <td>0.122876</td>\n",
+       "      <td>0.137255</td>\n",
+       "      <td>0.118954</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>D</th>\n",
+       "      <td>0.130672</td>\n",
+       "      <td>0.121597</td>\n",
+       "      <td>0.116152</td>\n",
+       "      <td>0.121143</td>\n",
+       "      <td>0.137477</td>\n",
+       "      <td>0.117514</td>\n",
+       "      <td>0.124773</td>\n",
+       "      <td>0.130672</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          AAA        AA         A       BBB        BB         B         C  \\\n",
+       "AAA  0.122658  0.128011  0.116860  0.121766  0.136931  0.126227  0.120874   \n",
+       "AA   0.124833  0.131053  0.126610  0.126610  0.117725  0.131941  0.119058   \n",
+       "A    0.120526  0.127775  0.134119  0.123244  0.117807  0.129588  0.124604   \n",
+       "BBB  0.121843  0.126717  0.117412  0.124502  0.135135  0.130704  0.122286   \n",
+       "BB   0.119238  0.133865  0.125443  0.123227  0.122340  0.117465  0.130762   \n",
+       "B    0.124563  0.109703  0.115385  0.141608  0.125437  0.125874  0.138986   \n",
+       "C    0.123312  0.128540  0.124183  0.123312  0.121569  0.122876  0.137255   \n",
+       "D    0.130672  0.121597  0.116152  0.121143  0.137477  0.117514  0.124773   \n",
+       "\n",
+       "            D  \n",
+       "AAA  0.126673  \n",
+       "AA   0.122168  \n",
+       "A    0.122338  \n",
+       "BBB  0.121400  \n",
+       "BB   0.127660  \n",
+       "B    0.118444  \n",
+       "C    0.118954  \n",
+       "D    0.130672  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for i in range(len(overall_transition_matrix_df)):\n",
+    "    total = overall_transition_matrix_df.iloc[i].sum()\n",
+    "    for j in range(len(overall_transition_matrix_df.columns)):\n",
+    "        overall_transition_matrix_df.iloc[i, j] /= total\n",
+    "overall_transition_matrix_df.to_excel(f'outputs/overall_ratings_transition_matrix.xlsx')\n",
+    "overall_transition_matrix_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "3ac68761",
    "metadata": {},
    "outputs": [],
@@ -488,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "ed06fbc1",
    "metadata": {},
    "outputs": [],
